# wiki-parser-python

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  index.html  pyproject.toml
coverage_report/: d_145eef247bfb46b6___init___py.html  d_145eef247bfb46b6_extract_dumpdate_py.html  d_145eef247bfb46b6_extract_wiki_py.html  d_145eef247bfb46b6_logger_py.html  d_145eef247bfb46b6_paths_py.html  d_145eef247bfb46b6_process_article_py.html  index.html  status.json
documentation/docs/: index.md
documentation/site/: index.html
documentation/site/search/: search_index.json
documentation/site/test_coverage_report/: d_145eef247bfb46b6___init___py.html  d_145eef247bfb46b6_extract_dumpdate_py.html  d_145eef247bfb46b6_logger_py.html  d_145eef247bfb46b6_paths_py.html
src/: article.py  database.py  dumpdate.py  extract_dumpdate.py  extract_wiki.py  get_latest_wikidate.py  logger.py  paths.py  regex_collection.py  store.py  test.py
test_coverage_report/: d_145eef247bfb46b6_extract_wiki_py.html  d_145eef247bfb46b6_process_article_py.html  index.html  status.json
tests/: test_get_latest_wikidate.py
tests/coverage_report/: d_145eef247bfb46b6___init___py.html  d_145eef247bfb46b6_get_latest_wikidate_py.html  d_145eef247bfb46b6_paths_py.html  d_145eef247bfb46b6_process_wikipedia_article_py.html  index.html  status.json
tests/data/: sample_article_text  sample_dumppage_content
tests/integration/: test_extract_dumpdate.py
tests/unit/: test_extract_dumpdate.py  test_get_latest_wikidate.py
