[tool.poetry]
name = "wiki-parser-python"
version = "0.1.0"
description = "Parser for Wikipedia, Wikidata and Wiktionary"
authors = ["karimvision <kabdulmunaff@brandwatch.com>"]

[tool.poetry.dependencies]
python = "3.10.*"
ray = "^2.3.0"
pytest = "^7.2.2"
requests = "^2.28.2"
coverage = "^7.2.2"
mkdocs = "^1.4.2"
tqdm = "^4.65.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
